--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -83,7 +83,7 @@
                   <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
 
                   <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
-                    <%= link_to do %>
+                    <%= link_to owner_pet_path(booking.pet.user, booking.pet) do %>
                       <span class="dropdown-item manage-booking-item"><p>Pet health profile</p></span>
                     <% end %>
 
@@ -91,7 +91,7 @@
                       <span class="dropdown-item manage-booking-item"><p>Change booking</p></span>
                     <% end %>
 
-                    <%= link_to do %>
+                    <%= link_to booking_path(booking), method: :delete, data: {confirm: "Are you sure you want to cancel this booking?"}  do %>
                       <span class="dropdown-item manage-booking-item"><p>Cancel booking</p></span>
                     <% end %>
 
