--- a/app/assets/stylesheets/pages/pets/_show.scss
+++ b/app/assets/stylesheets/pages/pets/_show.scss
@@ -174,7 +174,19 @@ padding-left: 0;
 
 .input-diagnosis {
   text-decoration: none;
-  color: $submit-button-green;
+  color:$submit-button-green;
+  padding-right: 20px;
+}
+
+.input-diagnosis-vaccinations{
+color:$submit-button-orange;
+  padding-right: 20px;
+  text-decoration: none;
+
+}
+
+.input-diagnosis:hover {
+opacity: 0.7;
 }
 
 .one-diagnosis {
