--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -79,7 +79,11 @@
                 </div>
 
                 <div class="flex-fill one-booking-b-col" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
+<div class="d-flex justify-content-between">
+                    <p><strong>Pet:</strong> <%= booking.pet.name%></p >
 
+                    <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
+                    
 
                   <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
                     <%= link_to owner_pet_path(booking.pet.user, booking.pet) do %>
