--- a/app/assets/stylesheets/pages/vets/_new.scss
+++ b/app/assets/stylesheets/pages/vets/_new.scss
@@ -32,18 +32,19 @@
    }
   }
 
+  a.delete-photo {
+    color: lightgray;
+  }
+
   .form-inputs-vet {
     color:white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     margin-top: 10px;
-    align-items: center;
-    //border: 3px solid black;
-    width: 100%;
-    // margin-top: 0;
+
   }
 
-.form-bar-width {
+.vet-form-bar-width {
   max-height: 200px;
 }
 
@@ -53,10 +54,10 @@ margin-top: 10px;
 .submit_class {
   color:white;
   background-color: $submit-button-orange;
-  padding: 8px 13px;
+  padding: 8px 20px;
   border: 1px solid $submit-button-orange;
   border-radius: 5px;
-  width: 80px;
+  width: 100px;
   text-align:center;
   margin-right: 5px;
 
@@ -69,7 +70,7 @@ margin-top: 10px;
   padding: 8px 13px;
   border: 1px solid $submit-button-orange;
   border-radius: 5px;
-  width: 80px;
+  width: 100px;
   text-align:center;
   margin-left: 5px;
 
