--- a/app/views/vets/new.html.erb
+++ b/app/views/vets/new.html.erb
@@ -9,7 +9,7 @@
           <%= f.input :last_name %>
           <%= f.input :speciality %>
 
-          <%= f.input :bio, as: :text, input_html: { class: "form-bar-width", maxlength: 200} %>
+          <%= f.input :bio, as: :text, input_html: { class: "vet-form-bar-width", maxlength: 200} %>
           <%= f.input :photo, as: :file, label: "Upload a photo" %>
 
 
