fixed the booking form

--- a/app/assets/stylesheets/pages/bookings/_new.scss
+++ b/app/assets/stylesheets/pages/bookings/_new.scss
@@ -3,7 +3,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   padding: 150px 0;
-  display: flex;
+  //display: flex;
   background-image: image-url("paws.png");
   height: 100vh;
   align-items: center;
@@ -11,13 +11,14 @@
 }
 
   .booking-form-container {
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
   margin-top: auto;
   margin-bottom: auto;
   background-color: $submit-button-green;
   max-height: 700px;
+  width: 500px;
   border-radius: 3px;
   overflow: auto;
    h4 {
@@ -31,15 +32,17 @@
   }
 
   .form-inputs-booking {
-      color:white;
+    color:white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     margin-top: 10px;
+    align-items: center;
+    justify-content: center;
 
   }
 
 .booking-buttons {
-margin-top: 10px;
+margin-top: 20px;
 
 .submit_class {
   color:white;
