--- a/app/assets/stylesheets/pages/health_records/_new.scss
+++ b/app/assets/stylesheets/pages/health_records/_new.scss
@@ -2,28 +2,25 @@
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  padding: 20px;
+  padding: 150px 0;
   background-image: image-url("paws.png");
   height: 100vh;
   align-items: center;
   overflow-y: auto;
 }
 
-
-.form-inputs-health_record {
-  margin-top: 0;
-}
-
   .health_record-form-container {
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 20px;
-  margin-top: auto;
-  margin-bottom: auto;
-  background-color: $submit-button-green;
-  height-max: 300px;
-  border-radius:3px;
-  width: 500px;
+    padding-bottom: 50px;
+    padding-top: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
+    background-color: $submit-button-green;
+    max-height: 800px;
+    width: 500px;
+    border-radius:3px;
+    overflow: auto;
      h4 {
      color:$submit-button-orange;
     font-family: 'Montserrat', sans-serif;
@@ -35,26 +32,26 @@
   }
 
   .form-inputs-health_record {
-      color:white;
+    color:white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     margin-top: 10px;
+    align-items: center;
+    justify-content: center;
 
   }
 
 .health_record-buttons {
-margin-top: 10px;
-  text-align:center;
+  margin-top: 20px;
 
 
 .submit_record {
   color:white;
   background-color: $submit-button-orange;
-  padding: 10px 20px;
+  padding: 8px 20px;
   border: 1px solid $submit-button-orange;
   border-radius: 5px;
-  width: 80px;
-  width: 130px;
+  width: 150px;
   text-align:center;
   margin-right: 5px;
 
@@ -65,7 +62,7 @@ margin-top: 10px;
   padding: 8px 13px;
   border: 1px solid $submit-button-orange;
   border-radius: 5px;
-  width: 80px;
+  width: 100px;
   text-align:center;
   margin-left: 5px;
 
