--- a/app/assets/stylesheets/pages/vets/_new.scss
+++ b/app/assets/stylesheets/pages/vets/_new.scss
@@ -13,7 +13,8 @@
   .vet-new-form-container {
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
+    padding-top: 20px;
     margin-top: auto;
     margin-bottom: auto;
     background-color: $submit-button-green;
