--- a/app/views/health_records/new.html.erb
+++ b/app/views/health_records/new.html.erb
@@ -1,45 +1,40 @@
 <div class="health_record-background d-flex justify-content-center">
   <div class="health_record-form-container">
     <h4>Add a health record</h4>
-      <%= simple_form_for([@owner, @pet, @health_record], data:{contoller:"example"}) do |f| %>
 
-        <!-- <div class="form-inputs-booking d-flex align-items-center"> -->
-          <div class="form-inputs-health_record ">
+      <div class="form-inputs-health_record d-flex">
+        <%= simple_form_for([@owner, @pet, @health_record], data:{contoller:"example"}) do |f| %>
+
             <%= f.input :type, collection: %w[Diagnosis Vaccination], input_html: {data: {reflex: "change->ExampleReflex#change_record"}} %>
 
-<% if @type == "Diagnosis" %>
+              <% if @type == "Diagnosis" %>
 
-    <%= f.input :pet, input_html: {value: @pet.name}, disabled: true %>
-<%=f.input :pet_id, :as => :hidden, :input_html => { :value => @pet.id }%>
-<%= f.input :diagnosis_date %>
-<%= f.input :diagnosis%>
-<%= f.input :treatment%>
-<%= f.input :document, as: :file, label: "Please up load documents"  %>
+                <%= f.input :pet, input_html: {value: @pet.name}, disabled: true %>
+                <%= f.input :pet_id, :as => :hidden, :input_html => { :value => @pet.id }%>
+                <%= f.input :diagnosis_date %>
+                <%= f.input :diagnosis%>
+                <%= f.input :treatment%>
+                <%= f.input :document, as: :file, label: "Please up load documents"  %>
+                <div class="health_record-buttons d-flex justify-content-between">
+                  <%= f.submit "Add record", disable_with: 'Submiting...',:class => 'submit_record'  %>
+                  <%= link_to "Back", owner_pet_path(@owner,@pet), class: "btn_back"%>
+                </div>
 
+              <% else %>
 
-<div class="health_record-buttons d-flex justify-content-between">
-    <%= f.submit "Add record", disable_with: 'Submiting...',:class => 'submit_record'  %>
-    <%= link_to "Back", owner_pet_path(@owner,@pet), class: "btn_back"%>
- </div>
-</div>
-  </div>
+                <%= f.input :pet, input_html: {value: @pet.name}, disabled: true %>
+                <%= f.input :pet_id, :as => :hidden, :input_html => { :value => @pet.id }%>
+                <%= f.input :vaccination_date %>
+                <%= f.input :vaccination_type%>
+              <div class="health_record-buttons d-flex justify-content-between">
+                <%= f.submit "Add record", disable_with: 'Submiting...',:class => 'submit_record' %>
+                <%= link_to "Back", owner_pet_path(@owner,@pet), class: "btn_back"%>
+              </div>
 
- <div>
-  <% else %>
-  <%= f.input :pet, input_html: {value: @pet.name}, disabled: true %>
-  <%=f.input :pet_id, :as => :hidden, :input_html => { :value => @pet.id }%>
-  <%= f.input :vaccination_date %>
-  <%= f.input :vaccination_type%>
-<div class="health_record-buttons d-flex justify-content-between">
-  <%= f.submit "Add record", disable_with: 'Submiting...',:class => 'submit_record' %>
-  <%= link_to "Back", owner_pet_path(@owner,@pet), class: "btn_back"%>
-</div>
-</div>
+              <% end %>
+          </div>
 
-<% end %>
-
-
-<% end %>
+      <% end %>
 
     </div>
   </div>
