--- a/app/views/vaccinations/edit.html.erb
+++ b/app/views/vaccinations/edit.html.erb
@@ -1,20 +1,22 @@
 <div class="health_record-background d-flex justify-content-center">
 
   <div class="health_record-form-container">
-    <h4>Add a health record</h4>
-    <%= simple_form_for([@owner, @pet, @vaccination])  do |f| %>
-      <div class="form-inputs-health_record ">
-        <%= f.input :type, collection: %w[Diagnosis Vaccination], input_html: {data: {reflex: "change->ExampleReflex#change_record"}}, disabled: true%>
+    <h4>Edit a health record</h4>
+
+      <div class="form-inputs-health_record d-flex">
+        <%= simple_form_for([@owner, @pet, @vaccination])  do |f| %>
+
+          <%= f.input :type, collection: %w[Diagnosis Vaccination], input_html: {data: {reflex: "change->ExampleReflex#change_record"}}, disabled: true%>
           <%= f.input :pet, input_html: {value: @pet.name}, disabled: true %>
-          <%=f.input :pet_id, :as => :hidden, :input_html => { :value => @pet.id }%>
+          <%= f.input :pet_id, :as => :hidden, :input_html => { :value => @pet.id }%>
           <%= f.input :vaccination_date %>
           <%= f.input :vaccination_type%>
           <div class="health_record-buttons d-flex justify-content-between">
             <%= f.submit "Add record", disable_with: 'Submiting...',:class => 'submit_record' %>
             <%= link_to "Back", owner_pet_path(@owner,@pet), class: "btn_back"%>
           </div>
-        
+
+        <% end %>
       </div>
-    <% end %>
   </div>
 </div>
