--- a/app/assets/stylesheets/pages/pets/_new.scss
+++ b/app/assets/stylesheets/pages/pets/_new.scss
@@ -2,8 +2,7 @@
    background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
-  padding: 150px 0;
-  display: flex;
+  padding: 20px 0;
   background-image: image-url("paws.png");
   height: 100vh;
   align-items: center;
@@ -11,15 +10,18 @@
 }
 
 
-.newpet-form{
+.newpet-form-container{
   padding-left: 20px;
   padding-right: 20px;
-  margin-top: 15px;
-  margin-bottom: 30px;
+  padding-bottom: 50px;
+  padding-top: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
   background-color: $submit-button-green;
-  width: 450px;
-   // height: 1000px;
+  max-height: 900px;
+  width: 500px;
   border-radius:3px;
+  overflow: auto;
    h4 {
      color:$submit-button-orange;
     font-family: 'Montserrat', sans-serif;
@@ -31,20 +33,26 @@
   }
 
   .form-inputs-newpet {
-      color:white;
+    color:white;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     margin-top: 10px;
+    align-items: center;
+    justify-content: center;
 
   }
 
+.pet-form-bar-width {
+  max-height: 70px;
+}
+
   .newpet-buttons {
 margin-top: 10px;
-margin-bottom: 20px;
+
 .submit_class {
   color:white;
   background-color: $submit-button-orange;
-  padding: 10px 15px;
+  padding: 8px 20px;
   border: 1px solid $submit-button-orange;
   border-radius: 5px;
   width: 100px;
