--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="editpet-background d-flex justify-content-center">
-  <div class="editpet-form form mt-5">
+  <div class="editpet-form-container">
     <h4>Edit pet basic info</h4>
-        <div class="form-inputs-editpet">
+        <div class="form-inputs-editpet d-flex">
         <%= simple_form_for [@owner, @pet] do |f| %>
           <%= f.input :name %>
             <%= f.input :dob %>
@@ -9,11 +9,11 @@
             <%= f.input :breed %>
             <%= f.input :gender, collection: Pet.genders.keys %>
             <%= f.label :notes, 'Describe behavior during vet visits' %>
-            <%= f.input :notes, as: :text, label: false ,:placeholder => 'nervous, calm, growling, snapping, or biting' %>
+            <%= f.input :notes, as: :text, label: false ,:placeholder => 'nervous, calm, growling, snapping, or biting', input_html: { class: "pet-form-bar-width", maxlength: 50} %>
             <%= f.input :photo, as: :file, label: "Upload a photo" %>
-            <%= link_to "❌Delete photo", delete_photo_owner_pet_path(@owner, @pet), method: :delete, data: { confirm: 'Are you sure?' }, class: "delete_photo" %>
+            <%= link_to "❌ Delete photo", delete_photo_owner_pet_path(@owner, @pet), method: :delete, data: { confirm: 'Are you sure?' }, class: "delete_photo" %>
         </div>
-        <div class="editpet-buttons d-flex justify-content-around mb-3">
+        <div class="editpet-buttons d-flex justify-content-around">
           <%= f.submit "Edit Pet", :class => 'submit_class' %>
           <%= link_to "Back",owners_dash_path(current_user), class: "btn_back"  %>
         </div>
