--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -35,7 +35,9 @@
   <!-- <div class="vaccinations"> -->
   <div class="vaccinations-header row d-flex align-items-center justify-content-start">
         <h4>Vaccinations</h4>
-        <%= link_to "📝 Input vaccination record", new_owner_pet_health_record_path(@pet.user,@pet), class: "input-diagnosis"%>
+        <%= link_to new_owner_pet_health_record_path(@pet.user,@pet) do %>
+          <span class= "input-diagnosis"><p>📝 Add a record</p></span>
+        <%end%>
   </div>
 
 
@@ -99,7 +101,10 @@
 <div class="diagnosis row " style="background-color: white;">
       <div class="medicalrecord row d-flex align-items-center justify-content-start ml-3">
         <h4>Vet reports</h4>
-        <%# <%= link_to "📝 Input medical record", new_owner_pet_health_record_path(@owner,@pet), class: "input-diagnosis"%> 
+        <%= link_to new_owner_pet_health_record_path(@pet.user,@pet) do %>
+          <span class= "input-diagnosis"><p>📝 Add a record</p></span>
+        <%end%>
+        <%#= link_to "📝 Add a record", new_owner_pet_health_record_path(@pet.user,@pet), class: "input-diagnosis"%>
       </div>
 
     <div class= "container container-diagnosis d-flex align-items-start mb-1">
@@ -158,7 +163,7 @@
 
        <div class="d-flex align-items-start last-box col-3 justify-content-start" >
 
-       
+
 
       </div>
 
