--- a/app/assets/stylesheets/pages/owners/_dash.scss
+++ b/app/assets/stylesheets/pages/owners/_dash.scss
@@ -1,5 +1,13 @@
 
+
+
 // LEFT COLUMN
+
+.profile-container{
+  min-width: 250px;
+  flex-wrap: wrap;
+}
+
 .avatar-owner-profile {
   background-size: cover;
   background-position: top center;
@@ -246,6 +254,10 @@
 
 // clinic cards
 
+.clinic-map-container {
+  flex-wrap: wrap;
+}
+
 .clinic-cards {
   //border: 1px solid black;
   display: flex;
@@ -335,6 +347,8 @@
 a:link, a:visited, a:hover, a:active {
   text-decoration: none;
 }
+
+
 
 
 
