--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -3,46 +3,46 @@
 
 
 
-<body>
+<body style="padding-right: 0; margin-right: 0">
 
-  <div class="row users-dashboard">
+  <div class="row users-dashboard d-flex justify-content-center" style="padding-left: 10px; padding-right: 10px;">
     <!-- LEFT column -->
-    <div class="col-2 container">
-
-      <div class="row d-flex justify-content-center align-items-center" style="margin: 10px; padding: 5px;">
-        <% if @owner.photo.attached? %>
-          <%= cl_image_tag(@owner.photo.key,
-          :class => "owner_avatar", crop: :fill) %>
-        <% else %>
-          <%= image_tag "default-profile-image.jpg", :class => 'avatar-owner-profile' %>
-          <% end %>
-      </div>
-
-      <div style="margin: 10px; padding: 5px;">
-        <div class="owner-profile-name">
-         <h4 style="font-weight: bold; text-align: center; padding-bottom: 15px;"><%= @owner.name%></h4>
+    <div class="col-xl-2 col-lg-6 col-md-10 col-sm-10 col-xs-10 container profile-container">
+      <div style="margin-top: 20px; background-color: white">
+        <div class="row d-flex justify-content-center align-items-center" style="margin: 10px; padding: 5px;">
+          <% if @owner.photo.attached? %>
+            <%= cl_image_tag(@owner.photo.key,
+            :class => "owner_avatar", crop: :fill) %>
+          <% else %>
+            <%= image_tag "default-profile-image.jpg", :class => 'avatar-owner-profile' %>
+            <% end %>
         </div>
 
-        <div class="">
-          <p><span style="color: #006A71; font-weight: bold">Address:</span> <br><%= @owner.location %></p>
-        </div>
+        <div style="margin: 10px; padding: 5px;">
+          <div class="owner-profile-name">
+           <h4 style="font-weight: bold; text-align: center; padding-bottom: 15px;"><%= @owner.name%></h4>
+          </div>
 
-        <div class="owner-profile-phone">
-          <p><span style="color: #006A71; font-weight: bold">Phone number:</span> <br><%= @owner.phone_number %></p>
-        </div>
+          <div class="">
+            <p><span style="color: #006A71; font-weight: bold">Address:</span> <br><%= @owner.location %></p>
+          </div>
 
-        <div class="owner-profile-email">
-          <p><span style="color: #006A71; font-weight: bold">Account e-mail:</span> <br><%= @owner.email %></p>
-        </div>
+          <div class="owner-profile-phone">
+            <p><span style="color: #006A71; font-weight: bold">Phone number:</span> <br><%= @owner.phone_number %></p>
+          </div>
 
-        <div class="edit-profile-dash">
-         <%= link_to "Edit your profile", edit_owner_path(@owner),data: { turbolinks: false } %>
-        </div>
+          <div class="owner-profile-email">
+            <p><span style="color: #006A71; font-weight: bold">Account e-mail:</span> <br><%= @owner.email %></p>
+          </div>
 
-        <div class="add-pet-dash">
-          <%= link_to "Add new pet", new_owner_pet_path(@owner), data: { turbolinks: false } %>
-        </div>
+          <div class="edit-profile-dash">
+           <%= link_to "Edit your profile", edit_owner_path(@owner),data: { turbolinks: false } %>
+          </div>
 
+          <div class="add-pet-dash">
+            <%= link_to "Add new pet", new_owner_pet_path(@owner), data: { turbolinks: false } %>
+          </div>
+        </div>
 
       </div>
     </div>
@@ -83,7 +83,7 @@
                     <p><strong>Pet:</strong> <%= booking.pet.name%></p >
 
                     <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
-                    
+
 
                   <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
                     <%= link_to owner_pet_path(booking.pet.user, booking.pet) do %>
@@ -172,12 +172,12 @@
 
 
     <!-- start of CLINICs + MAP container -->
-        <div style= "background-color: white; margin-top: 20px; padding-top: 10px; padding-bottom: 20px;">
+        <div class="row clinic-map-container d-flex justify-content-around align-items-center" style= "background-color: white; margin-top: 20px; padding-top: 10px; padding-bottom: 20px;">
 
         <h3 style="color: #FF7E67; font-weight: 200; text-align: center">CLINICS IN YOUR AREA</h3>
-
+<!-- col-xl-2 col-lg-4 col-md-10 col-sm-10 col-xs-10  -->
         <div class="row">
-        <div class="col-8 container clinic-cards">
+        <div class="col-xl-8 col-lg-6 col-md-8 col-xs-10 container clinic-cards">
 
           <% @clinics.each do |clinic| %>
             <%= link_to clinic_path(clinic) do %>
@@ -204,9 +204,9 @@
         <!-- CLINICS CARDS end-->
 
           <!-- MAP -->
-          <div class="col-4">
+          <div class="col-xl-4 col-lg-6 col-md-8 col-xs-10 container d-flex justify-content-center align-items-start">
             <div id="map"
-              style="width: 100%; height: 700px; margin-top: 30px; margin-bottom: 20px;"
+              style="width: 100%; height: 700px; margin-top: 30px; margin-bottom: 20px; margin-left: 20px; margin-right: 20px;"
               data-markers="<%= @markers.to_json %>"
               data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
             </div>
