--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,12 +1,12 @@
 
 <div class = "petshow container">
 
-    <div class="header pet-show-header row d-flex justify-content-center align-items-center mt-4">
+    <div class="header pet-show-header row d-md-flex justify-content-center align-items-center mt-4">
       <h4><%= @pet.name.capitalize %>'s Health Record</h4>
     </div>
 
-<div class="row d-flex justify-content-around align-items-start mt-4 first-row" style="background-color: white;">
-     <div class="col-4">
+<div class="row d-md-flex justify-content-around align-items-start mt-4 first-row" style="background-color: white;">
+     <div class="col-md-4">
         <div class="container flip-card-petshow">
           <div class="flipper flipper-card-petshow">
 
@@ -31,9 +31,9 @@
         </div>
      </div>
 
- <div class="col-8 vaccinations">
+ <div class="col-lg-8 vaccinations">
   <!-- <div class="vaccinations"> -->
-  <div class="vaccinations-header row d-flex align-items-center justify-content-start">
+  <div class="vaccinations-header row d-md-flex align-items-center justify-content-start">
         <h4>Vaccinations</h4>
         <%= link_to "📝 Input vaccination record", new_owner_pet_health_record_path(@pet.user,@pet), class: "input-diagnosis"%>
   </div>
@@ -103,11 +103,11 @@
       </div>
 
     <div class= "container container-diagnosis d-flex align-items-start mb-1">
-      <div class="header-a col-3 d-flex align-items-start">
+      <div class="header-a col-2 d-flex align-items-start">
         <p><strong>Date of visit</strong><br></p>
       </div>
 
-      <div class= "col-3 header-a d-flex align-items-start " >
+      <div class= "col-4 header-a d-flex align-items-start " >
         <p><strong>Diagnosis</strong><br></p>
       </div>
 
@@ -115,7 +115,7 @@
         <p><strong>Treatment</strong><br></p>
       </div>
 
-       <div class="d-flex align-items-center last-box col-3" >
+       <div class="d-flex align-items-center last-box col-2" >
       </div>
 
       </div>
@@ -131,15 +131,15 @@
 
       </div>
 
-      <div class= "col-3 one-diagnosis-b d-flex align-items-start" >
+      <div class= "col-4 one-diagnosis-b d-flex align-items-start" >
         <p><%= record.diagnosis %></p>
       </div>
 
-      <div class="col-3 one-diagnosis-c d-flex align-items-start">
+      <div class="col-3 one-diagnosis-c d-flex align-items-start text-wrap ">
         <p><%= record.treatment  %></p>
       </div>
 
-      <button class="btn dropdown-toggle one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
+      <button class="btn dropdown-toggle one-booking-col-btn " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
       <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
         <%= link_to do %>
           <span class="dropdown-item manage-booking-item"><p>View full report</p></span>
