added reason for visit to the appointments table in clinic dash and owner dash

--- a/app/views/clinics/dash.html.erb
+++ b/app/views/clinics/dash.html.erb
@@ -24,6 +24,7 @@
     <div class="flex-fill one-booking-b" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
       <p><strong>Owner name:</strong> <%= booking.pet.user.name %></p>
       <p><strong>Veterinary booked:</strong> <%= vet.first_name %> <%= vet.last_name %></p>
+      <p><strong>Reason for vist:</strong> <%= booking.reason_for_visit %></p>
     </div>
 
     <div class="flex-fill one-booking-c" style="  border-left: 1px solid lightgray; padding: 0 20px; padding-top: 5px">
@@ -80,6 +81,7 @@
     <div class="flex-fill one-booking-b" style="  border-left: 1px solid lightgray; padding-left: 20px; padding-top: 5px">
       <p><strong>Owner name:</strong> <%= booking.pet.user.name %></p>
       <p><strong>Veterinary booked:</strong> <%= vet.first_name %> <%= vet.last_name %></p>
+      <p><strong>Reason for vist:</strong> <%= booking.reason_for_visit %></p>
     </div>
 
     <div class="flex-fill one-booking-c" style="  border-left: 1px solid lightgray; padding: 0 20px; padding-top: 5px">
