--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -103,6 +103,8 @@
                   <p><strong>Clinic:</strong> <%= booking.vet.user.name%></p>
                   <p><strong>Address:</strong> <%= booking.vet.user.location %></p>
                   <p><strong>Veterinary:</strong> <%= booking.vet.first_name %> <%= booking.vet.last_name %></p>
+                  <p><strong>Reason for vist:</strong> <%= booking.reason_for_visit %></p>
+
                 </div>
 
 
