--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -103,11 +103,11 @@
       </div>
 
     <div class= "container container-diagnosis d-flex align-items-start mb-1">
-      <div class="header-a col-2 d-flex align-items-start">
+      <div class="header-a col-md-3 col-sm-2 d-flex align-items-start">
         <p><strong>Date of visit</strong><br></p>
       </div>
 
-      <div class= "col-4 header-a d-flex align-items-start " >
+      <div class= "col-md-3 col-sm-4 header-a d-flex align-items-start " >
         <p><strong>Diagnosis</strong><br></p>
       </div>
 
@@ -115,7 +115,7 @@
         <p><strong>Treatment</strong><br></p>
       </div>
 
-       <div class="d-flex align-items-center last-box col-2" >
+       <div class="d-flex align-items-center last-box col" >
       </div>
 
       </div>
@@ -125,21 +125,21 @@
     <% if record.type == "Diagnosis" %>
     <div class= "container container-diagnosis d-flex align-items-start mb-2">
 
-      <div class="one-diagnosis-date col-3 d-flex align-items-start">
+      <div class="one-diagnosis-date col-md-3 col-sm-2 d-flex align-items-start">
         <p><%= record.diagnosis_date %></p>
         <%= link_to "✏️", edit_owner_pet_diagnosis_path(@pet.user, @pet, record)%>
 
       </div>
 
-      <div class= "col-4 one-diagnosis-b d-flex align-items-start" >
+      <div class= "col-md-3 col-sm-4 one-diagnosis-b d-flex align-items-start" >
         <p><%= record.diagnosis %></p>
       </div>
 
-      <div class="col-3 one-diagnosis-c d-flex align-items-start text-wrap ">
+      <div class="col-3 one-diagnosis-c d-md-flex align-items-start text-wrap ">
         <p><%= record.treatment  %></p>
       </div>
 
-      <button class="btn dropdown-toggle one-booking-col-btn " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
+      <button class="btn dropdown-toggle col-sm-1 one-booking-col-btn  text-truncate " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
       <div class="dropdown-menu dropdown-menu-right booking-manage-action" aria-labelledby="dropdownMenuButton">
         <%= link_to do %>
           <span class="dropdown-item manage-booking-item"><p>View full report</p></span>
