changed the responsive of owners dash

--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -7,7 +7,7 @@
 
   <div class="row users-dashboard d-flex justify-content-center" style="padding-left: 10px; padding-right: 10px;">
     <!-- LEFT column -->
-    <div class="col-xl-2 col-lg-6 col-md-10 col-sm-10 col-xs-10 container profile-container">
+    <div class="col-1 container profile-container">
       <div style="margin-top: 20px; background-color: white">
         <div class="row d-flex justify-content-center align-items-center" style="margin: 10px; padding: 5px;">
           <% if @owner.photo.attached? %>
@@ -49,7 +49,7 @@
 
 
     <!-- RIGHT column -->
-    <div class="col-10 map-and-booking-info">
+    <div class="col map-and-booking-info">
 
       <div>
 
@@ -179,7 +179,7 @@
         <h3 style="color: #FF7E67; font-weight: 200; text-align: center">CLINICS IN YOUR AREA</h3>
 <!-- col-xl-2 col-lg-4 col-md-10 col-sm-10 col-xs-10  -->
         <div class="row">
-        <div class="col-xl-8 col-lg-6 col-md-8 col-xs-10 container clinic-cards">
+        <div class="col-6 col-md-10 container clinic-cards">
 
           <% @clinics.each do |clinic| %>
             <%= link_to clinic_path(clinic) do %>
@@ -206,9 +206,9 @@
         <!-- CLINICS CARDS end-->
 
           <!-- MAP -->
-          <div class="col-xl-4 col-lg-6 col-md-8 col-xs-10 container d-flex justify-content-center align-items-start">
+          <div class="col col-md-10 container d-flex justify-content-center align-items-start">
             <div id="map"
-              style="width: 100%; height: 700px; margin-top: 30px; margin-bottom: 20px; margin-left: 20px; margin-right: 20px;"
+              style="width: 100%; height: 700px; margin-top: 30px; margin-bottom: 20px; margin-left: 20px;"
               data-markers="<%= @markers.to_json %>"
               data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
             </div>
