--- a/app/views/owners/dash.html.erb
+++ b/app/views/owners/dash.html.erb
@@ -179,7 +179,7 @@
         <h3 style="color: #FF7E67; font-weight: 200; text-align: center">CLINICS IN YOUR AREA</h3>
 <!-- col-xl-2 col-lg-4 col-md-10 col-sm-10 col-xs-10  -->
         <div class="row">
-        <div class="col-6 col-md-10 container clinic-cards">
+        <div class="col-lg-8 col-md-12 container clinic-cards">
 
           <% @clinics.each do |clinic| %>
             <%= link_to clinic_path(clinic) do %>
@@ -206,9 +206,9 @@
         <!-- CLINICS CARDS end-->
 
           <!-- MAP -->
-          <div class="col col-md-10 container d-flex justify-content-center align-items-start">
+          <div class="col container d-flex justify-content-center align-items-start">
             <div id="map"
-              style="width: 100%; height: 700px; margin-top: 30px; margin-bottom: 20px; margin-left: 20px;"
+              style="width: 100%; height: 700px; margin-top: 30px; margin-bottom: 20px; margin-left: 20px; margin-right: 20px;"
               data-markers="<%= @markers.to_json %>"
               data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
             </div>
