made second part min 100vh

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -80,6 +80,7 @@ html, body {
    // background-color: #ffe3d8;
   // background-color: #fbf6f0;
   background-color: #fff5ea;
+  min-height: 100vh;
 
 }
 
@@ -112,7 +113,7 @@ html, body {
 }
 
 .master-box {
-  max-height: 100%;
+  
   min-height: 100vh;
 }
 
