--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -144,7 +144,7 @@
         <p><%= record.treatment  %></p>
       </div>
 
-      <button class="btn dropdown-toggle col-sm-1 one-booking-col-btn  text-truncate " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
+      <button class="btn dropdown-toggle col-sm-1 one-booking-col-btn" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Manage</button>
       <div class="dropdown-menu dropdown-menu-lg-right booking-manage-action" aria-labelledby="dropdownMenuButton">
         <%= link_to do %>
           <span class="dropdown-item manage-booking-item"><p>View full report</p></span>
